--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "ci": "^2.3.0",
     "express": "^4.18.2",
-    "i": "^0.3.7"
+    "i": "^0.3.7",
+    "mysql2": "^3.6.2"
   }
 }
